--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+:root{
+    --padding-container:100px 0;
+    --color-title:#001a49;
+}
+
 body{
     font-family: 'Poppins', sans-serif;
 
@@ -7,5 +12,137 @@ body{
     max-width: 1200px;
     margin: 0 auto;
     overflow: hidden;
-    background-color: black;
+    padding: var(--padding-container);
+}
+.hero{
+    width: 100%;
+    height: 100vh;
+    min-height: 600px;
+    max-height: 800px;
+    position: relative;
+    display: grid;
+    grid-template-rows: 100px 1fr;
+    color: #fff;
+}
+.hero::before{
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image:linear-gradient(180deg, #0000008a 0%, #0000008c 100%), url('../assets/img/asistente-medico-ayudando-al-paciente-ejercicios-fisioterapia.jpg');
+    background-size: cover;
+    clip-path: polygon(0 0, 100% 0, 100% 75%, 50% 95%, 0 80%);
+    z-index: -1;
+}
+/* nav */
+.nav{
+    --padding-container:0;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.nav__title{
+    font-weight: 300;
+}
+.nav__link{
+    margin-left: auto;
+    padding: 0;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: max-content;
+    gap: 2em;
+}
+.nav__links{
+    color: #fff;
+    text-decoration: none;
+}
+.nav__items{
+    list-style: none;
+}
+.nav__menu{
+    margin-left: auto;
+    cursor: pointer;
+    display: none;
+}
+.nav__img{
+    display: block;
+    width: 30px;
+}
+.nav__close{
+    display: var(--show,none);
+}
+/* hero-container */
+.hero__container{
+    display: grid;
+    min-width: 800px;
+    --padding-container:0;
+    grid-template-rows: max-content;
+    align-content: center;
+    gap: 1em;
+    padding-bottom: 100px;
+    text-align: center;
+}
+.hero__title{
+    font-size: 3rem;
+}
+.hero__paragraph{
+    margin-bottom: 20px;
+}
+.cta{
+    display: inline-block;
+    background-color: #2091f9;
+    justify-self: center;
+    color: #fff;
+    text-decoration: none;
+    padding: 13px 30px;
+    border-radius: 32px;
+}
+.cta:hover{
+    color: #2091f9;
+    background-color: #fff;
+    border: 2px solid #2091f9;
+}
+
+/* terapia */
+.terapia{
+    text-align: center;
+}
+.subtitle{
+    color: var(--color);
+    font-size: 1.5rem;
+    margin-bottom: 25px;
+}
+.terapias__paragraph{
+    line-height: 1.7;
+}
+.terapias__main{
+    padding-top: 80px;
+    display: grid;
+    width: 90%;
+    margin: 0 auto;
+    gap: 1em;
+    overflow: hidden;
+    grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+}
+.terapias__icons{
+    display: grid;
+    gap: 1em;
+    justify-content: center;
+    width: 300px;
+    overflow: hidden;
+    margin: 0 auto;
+}
+.terapias__icon{
+    width:40px;
+    margin: 0 auto;
+}
+.knowledge{
+    background-color: #e5e5f7;
+    
+    background-image:  radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
+    background-size: 20px 20px;
+    background-position: 0 0,10px 10px;
+    overflow: hidden;;
 }
