--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,7 @@ body{
     margin: 0 auto;
     text-align: center;
     margin-bottom: 30px;
+    font-size: 2rem;
 }
 .footer{
     background-color: #1d293f;
