change font size in hero__paragraph

--- a/css/style.css
+++ b/css/style.css
@@ -530,7 +530,9 @@ flex-wrap: wrap;
     }
     .hero__container{
         font-size: 70%;
-        
+    }
+    .hero__paragraph{
+        font-size: 15px;
     }
    
     .footer__container{
